# markov-advance

./: .gitattributes  .gitignore  COMMANDS.md  Cargo.toml  nono.txt
datas/: THROUGH THE SUN.txt  article_about_money_ig.txt  docs!!.txt  gpt_poem.txt  harris.txt  ice_cream.txt  old_book!.txt  poetry foundation ig.txt  trump.txt
src/: main.rs
