[package]
name = "makri"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zstd = "0.13"
rand = "0.8"
anyhow = "1.0"
rayon = "1.7"
rustc-hash = "2.0"
regex = "1.10"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
crossbeam-channel = "0.5"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
